Fixed swagger annotations for UsersFacade/BlacklistAccessToken
