# docs/swagger.json
@@ -30,7 +30,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/rest.SuccessResponse"
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/rest.SuccessResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/rest.BlankStruct"
+                                        }
+                                    }
+                                }
+                            ]
                         }
                     },
                     "400": {
